--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/netlify": "^6.2.0",
+    "@astrojs/node": "^9.1.0",
     "@tailwindcss/vite": "^4.0.7",
     "astro": "^5.3.0",
     "tailwindcss": "^4.0.7"
